@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Allow file list to FreshenCache
+
 0.012  2015-01-20 12:11:12 CAT
 
     - Require Cache::RedisDB 0.07
